vlib/v/checker/tests/check_generic_int_init.out
vlib/v/checker/tests/check_generic_int_init.vv:2:9: error: cannot instantiate `int`
    1 | fn test<T>() T {
    2 |     return T{}
      |            ~~~
    3 | }
    4 |
